# relay_tutorial

./: .env_template  main.py  pyproject.toml  trace.html
.nemo-relay/: plugins.toml
logs/: events.jsonl
output/: trace.html
src/langchain_tutorial/: basic_relay_agent.py  basic_switchyard_agent.py  main.py
src/langchain_tutorial/configs/: simple_profile.yaml
src/langchain_tutorial/logs/: events.jsonl
src/langchain_tutorial/relay_utils/: relay_interceptors.py
src/visualization/: extractors.py  html_conversion.py  transform.py  utils.py  visualize.py
