[project]
name = "relay-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.1",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "nemo-relay[langchain,langchain-nvidia,langgraph]>=0.5.0",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "uvicorn>=0.51.0",
]
